--- a/app/views/passwords/index.html.erb
+++ b/app/views/passwords/index.html.erb
@@ -3,9 +3,9 @@
 <h1>WELCOME TO The vault!</h1>
 <h2>in order to create a new article your going to need the username and password
 
-username: dhh
+username: RWBY
 
-password: secret
+password: DUST
 
 we appreiate our users complying...
 
