--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,5 @@
-<header class = header4articles>
-<%= link_to 'Home Page', welcome_index_url%>
-<%= link_to 'New article', new_article_path %>
-</header>
 
-<body class = body4articles>
+<div class = body4articles>
 
 <h1>Fan Aritcles</h1>
 
@@ -27,5 +23,5 @@
   <% end %>
 </table>
 
-</body>
+</div>
 
